Migrate async search to use an auto-created system index